<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_kodi"
        android:icon="@drawable/ic_nav_kodi"
        android:title="@string/nav_kodi" />
    <item
        android:id="@+id/nav_files"
        android:icon="@drawable/ic_nav_files"
        android:title="@string/nav_files" />
    <item
        android:id="@+id/nav_terminal"
        android:icon="@drawable/ic_nav_terminal"
        android:title="@string/nav_terminal" />
    <item
        android:id="@+id/nav_webdash"
        android:icon="@drawable/ic_nav_webdash"
        android:title="@string/nav_webdash" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/nav_settings" />
</menu>
